--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/webrtc": "^0.0.36",
     "axios": "^1.4.0",
     "pinia": "^2.1.6",
+    "swiper": "^10.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
