--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "gc_tgi_frontend",
+  "name": "gc_godpray",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "build:base": "vue-tsc --noEmit && vite build --mode production --base"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@types/webrtc": "^0.0.36",
     "axios": "^1.4.0",
     "pinia": "^2.1.6",
     "swiper": "^10.2.0",
