--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pinia": "^2.1.6",
     "swiper": "^10.2.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-starport": "^0.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
