--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "swiper": "^10.2.0",
     "vue": "^3.3.4",
     "vue-final-modal": "^4.4.5",
