--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.3.4",
     "vue-final-modal": "^4.4.5",
     "vue-loading-overlay": "6.0",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.2.4",
     "vue-starport": "^0.4.0"
   },
